cmake_minimum_required(VERSION 2.8)
project( FaceDetection )
find_package( OpenCV REQUIRED )
add_executable( FaceDetection src/FaceDetection.cpp src/Input.cpp src/Pixel_Based_Module.cpp src/Feature_Based_Module.cpp)
SET( CMAKE_CXX_FLAGS "-std=c++0x" )
SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg" )
SET( CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg" )
SET( CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pg" )
target_link_libraries( FaceDetection -lpthread -lm ${OpenCV_LIBS} )
